--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   superset:
     build:
@@ -9,6 +8,7 @@ services:
       - "8088:8088"
     volumes:
       - ./docker/pythonpath:/app/pythonpath
+      - superset_home:/app/superset_home  # Add this line
     env_file:
       - .env
     depends_on:
@@ -18,7 +18,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-
   redis:
     image: redis:7
     restart: always
@@ -29,6 +28,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-
 volumes:
   redis_data:
+  superset_home:  # Add this line
